<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <TextView android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version" />

    <TextView android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu" />

    <TextView android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path" />

    <TextView android:id="@+id/folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/folder" />

    <Button android:id="@+id/install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_install"
        android:onClick="installToybox" />

</LinearLayout>
